# python_docker_app_demo

./: Dockerfile  Makefile  README.md  setup.cfg
Foo/: cli.py
