[metadata]
name = my_app
url = https://github.com/cpp-lln-lab/foo
download_url = https://github.com/cpp-lln-lab/foo
author = Remi Gau
maintainer = Remi Gau
maintainer_email = remi.gau@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
license = LGPL-3.0
description = a python docker app
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
provides = foo

[options.entry_points]
console_scripts =
    my_app = Foo.cli:main

[options]
zip_safe = False
packages = find:
include_package_data = True
